# af3-neutron

./: .gitignore  pyproject.toml  run_neutron_refine.py
src/af3_neutron/: af3_runner.py  kinematics.py  sampler.py  sfc_adapter.py  topology.py
tests/: test_kinematics.py  test_loss_coupling.py  test_sfc_integration.py
